# IMMAD

./: README.md  mad.py  pyproject.toml  substitution.ipynb  substitution.py  x_center.npy  x_env.npy
dft/: __init__.py  dft.py  phonon.py
docker-stack/: README.md  build.json  bumpver.toml  docker-bake.hcl  docker-bake.override.json  dodo.py
docker-stack/stack/immad/: Dockerfile
docker-stack/stack/immad/before-notebook.d/: 40_prepare-aiida.sh  50_factory-reset.sh  60_prepare-aiidalab.sh
docker-stack/stack/init-user/: Dockerfile  init.sh
immad/abstract/: __init__.py  materials.py  predictor.py  validator.py
immad/apps/substitution/: __init__.py  ofm.py  predictor.py  validator.py
immad/apps/substitution/aiida-sub-models/: pyproject.toml
immad/apps/substitution/aiida-sub-models/aiida_sub_models/: __init__.py  calculations.py  parsers.py
immad/apps/substitution/aiida-sub-models/tests/: run_test.py  x_center.npy  x_env.npy
immad/dft/: dft.py  electronic_structure.py  launch.py
immad/plugins/substitution/: __init__.py  ofm.py  predictor.py  validator.py
setup/1.Kubernetes/: README.md
setup/1.Kubernetes/calico/: custom-resources.yaml
setup/1.Kubernetes/calico/3.28.0/: README.md
setup/2.OpenELB/: README.md  bgp.yaml  bgp_eip.yaml  eip.yaml  install.sh  other_eip.yaml
setup/3.ingress-nginx/: README.md  ingress-nginx-controller.yaml
setup/4.nfs-subdir-external-provisioner/: README.md
setup/5.postgresql/: README.md  postgres-deployment.yaml  postgres-storage-class.yaml  sec-env.conf
setup/6.rabbitmq/: README.md  cluster.yaml
setup/7.IMMAD/: README.md  config.yaml  create_secret.sh  deploy-jh.sh
setup/7.IMMAD/ssl_certs/certificate/: create_secret.sh  ingress.yaml
setup/7.IMMAD/ssl_certs/certificate/phenikaa_cert/: Mật khẩu PFX-DER.txt  _.phenikaa-uni.edu.vn.crt  _.phenikaa-uni.edu.vn.csr  _.phenikaa-uni.edu.vn.pem  certificate.der  certificate.pfx  private.key
setup/7.IMMAD/test/: create_secret.sh  postgresql-client.yml
test/substitution/: SrRuO3_Acta_Cryst_C45_365.vasp
test/substitution/models/: 16_relu_ofm0_rand_neg.h5  16_sigmoid_ofm0_rand_neg.h5  16_tanh_ofm0_rand_neg.h5  32_relu_ofm0_rand_neg.h5  32_sigmoid_ofm0_rand_neg.h5  32_tanh_ofm0_rand_neg.h5  4_relu_ofm0_rand_neg.h5  4_sigmoid_ofm0_rand_neg.h5  4_tanh_ofm0_rand_neg.h5  8_relu_ofm0_rand_neg.h5  8_sigmoid_ofm0_rand_neg.h5  8_tanh_ofm0_rand_neg.h5
