[build-system]
requires = ['flit_core >=3.4,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'immad'
dynamic = ['version']
description = 'Informatics for Molecules and MAterials Discovery (IMMAD) based on AiiDA infrastructure'
authors = [
  {name = 'Hung Dang', email = 'hung.dangthe@phenikaa-uni.edu.vn'},
  {name = 'Lam Pham', email = 'lam.phamtien@phenikaa-uni.edu.vn'},
  {name = 'Hoa Nghiem', email = 'hoa.nghiemthiminh@phenikaa-uni.edu.vn'},
  {name = 'Linh Nguyen', email = 'linh.nguyenngoc@phenikaa-uni.edu.vn'},
]
maintainers = [
  {name = 'Hung Dang', email = 'hung.dangthe@phenikaa-uni.edu.vn'},
]
readme = 'README.md'
keywords = ['immad']
requires-python = '>=3.8'
dependencies = [
  "aiida-core>=2.0,<3",
]

[project.entry-points.'aiida.workflows']
'immad.dft' = 'immad.dft.dft:DFTWorkChain'
'immad.phonon' = 'immad.dft.dft:PhononWorkChain'

[tool.flit.module]
name = 'immad'


